--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
                             <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Service</a>
+                            <a class="nav-link" href="./service.html">Service</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="./contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./recruit.html">Recruit</a>
                         </li>
                     </ul>
                 </div>
                 </nav>
         </header>
         <content>
+            <div class="container">
+                <img class="content-top-img" src="./assets/img/3063794_m.jpg">    
+            </div>
         </content>
     </body>
 </html>
