create about page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbar">
                     <ul class="navbar-nav mr-auto center-block">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./service.html">Service</a>
@@ -35,7 +35,26 @@
         </header>
         <content>
             <div class="container">
-                <img class="content-top-img" src="./assets/img/3063794_m.jpg">    
+                <img class="content-top-img" src="./assets/img/3063794_m.jpg">
+                <h1 id="about">About</h2>
+                <dl>
+                    <dt>Name</dt>
+                    <dd>Shunsuke Sato</dd>
+                    <dt>Job</dt>
+                    <dd>systems engineer</dd>
+                    <dt>Hobby</dt>
+                    <dd>Singing</dd>
+                    <dd>3D Modeling</dd>
+                    <dt>Language</dt>
+                    <dd>Java(SpringBoot/Struts)</dd>
+                    <dd>PHP(Laravel/FuelPHP)</dd>
+                    <dd>Javascript(React)</dd>
+                    <dd>VisualBasic(.NET)</dd>
+                    <dt>Industry</dt>
+                    <dd>Transport</dd>
+                    <dd>Travel</dd>
+                    <dd>Used car</dd>
+                </dl>
             </div>
         </content>
     </body>
